--- a/practice/p13/index.html
+++ b/practice/p13/index.html
@@ -88,7 +88,7 @@
                 <div>오전 10:30</div>
               </div>
               <div>
-                <h3 class="label">04h 15m</h3>
+                <h3 class="label smallTime">04h 15m</h3>
                 <img class="flight-icon" src="images/img_journey.svg">
               </div>
               <div>
@@ -104,24 +104,35 @@
           </div>
         </div>
 
+
         <div class="cabin">
-          <h3 class="name">일반</h3>
-          <p class="price">₩129,000</p>
-          <p class="left">100석 남음</p>
-          <button class="reserve">예약하기</button>
+          <div class=con>
+            <h3 class="name">일반</h3>
+            <p class="price">₩129,000</p>
+            <p class="left">100석 남음</p>
+            <button class="reserve">예약하기</button>
+          </div>
         </div>
+
+
         <div class="cabin soldout">
-          <h3 class="name">비즈니스</h3>
-          <p class="price">₩419,000</p>
-          <p class="left">0석 남음</p>
-          <button class="reserve" disabled>매진</button>
+          <div class=con>
+            <h3 class="name">비즈니스</h3>
+            <p class="price">₩419,000</p>
+            <p class="left">0석 남음</p>
+            <button class="reserve" disabled>매진</button>
+          </div>
         </div>
+
         <div class="cabin soldout-soon">
-          <h3 class="name">퍼스트</h3>
-          <p class="price">₩699,000</p>
-          <p class="left">1석 남음</p>
-          <button class="reserve">예약하기</button>
+          <div class=con>
+            <h3 class="name">퍼스트</h3>
+            <p class="price">₩699,000</p>
+            <p class="left">1석 남음</p>
+            <button class="reserve">예약하기</button>
+          </div>
         </div>
+
       </div>
 
 
