complete all tickets

--- a/practice/p13/index.html
+++ b/practice/p13/index.html
@@ -142,36 +142,57 @@
       <div class="flight-card">
         <div class="ticket">
           <h2 class="ticket-label">AIR TICKET 02</h2>
+
           <div class="content">
             <div class="departure-arrival">
-              <h3 class="label">출발</h3>
-              <div>오전 11:30</div>
-              <h3 class="label">04h 15m</h3>
-              <img class="flight-icon" src="images/img_journey.svg">
-              <h3 class="label">도착</h3>
-              <div>오후 3:29</div>
+              <div>
+                <h3 class="label">출발</h3>
+                <div>오전 11:30</div>
+              </div>
+              <div>
+                <h3 class="label">04h 15m</h3>
+                <img class="flight-icon" src="images/img_journey.svg">
+              </div>
+              <div>
+                <h3 class="label">도착</h3>
+                <div>오후 3:29</div>
+              </div>
             </div>
-            <h3 class="label">운행 항공편</h3>
-            <div>CL118, CL2403</div>
+
+            <div>
+              <h3 class="label">운행 항공편</h3>
+              <div>CL118, CL2403</div>
+            </div>
           </div>
         </div>
+
+
         <div class="cabin">
-          <h3 class="name">일반</h3>
-          <p class="price">₩129,000</p>
-          <p class="left">42석 남음</p>
-          <button class="reserve">예약하기</button>
+          <div class="con">
+            <h3 class="name">일반</h3>
+            <p class="price">₩129,000</p>
+            <p class="left">42석 남음</p>
+            <button class="reserve">예약하기</button>
+          </div>
         </div>
+
+
         <div class="cabin soldout">
-          <h3 class="name">비즈니스</h3>
-          <p class="price">₩419,000</p>
-          <p class="left">0석 남음</p>
-          <button class="reserve" disabled>매진</button>
+          <div class="con">
+            <h3 class="name">비즈니스</h3>
+            <p class="price">₩419,000</p>
+            <p class="left">0석 남음</p>
+            <button class="reserve" disabled>매진</button>
+          </div>
         </div>
+
         <div class="cabin soldout">
-          <h3 class="name">퍼스트</h3>
-          <p class="price">₩699,000</p>
-          <p class="left">0석 남음</p>
-          <button class="reserve" disabled>매진</button>
+          <div class="con">
+            <h3 class="name">퍼스트</h3>
+            <p class="price">₩699,000</p>
+            <p class="left">0석 남음</p>
+            <button class="reserve" disabled>매진</button>
+          </div>
         </div>
       </div>
 
@@ -186,35 +207,50 @@
           <h2 class="ticket-label">AIR TICKET 03</h2>
           <div class="content">
             <div class="departure-arrival">
-              <h3 class="label">출발</h3>
-              <div>오후 12:30</div>
-              <h3 class="label">04h 15m</h3>
-              <img class="flight-icon" src="images/img_journey.svg">
-              <h3 class="label">도착</h3>
-              <div>오후 4:29</div>
+              <div>
+                <h3 class="label">출발</h3>
+                <div>오후 12:30</div>
+              </div>
+              <div>
+                <h3 class="label">04h 15m</h3>
+                <img class="flight-icon" src="images/img_journey.svg">
+              </div>
+              <div>
+                <h3 class="label">도착</h3>
+                <div>오후 4:29</div>
+              </div>
             </div>
-            <h3 class="label">운행 항공편</h3>
-            <div>CL119, CL2404</div>
+            <div>
+              <h3 class="label">운행 항공편</h3>
+              <div>CL119, CL2404</div>
+            </div>
           </div>
         </div>
         <div class="cabin">
-          <h3 class="name">일반</h3>
-          <p class="price">₩129,000</p>
-          <p class="left">120석 남음</p>
-          <button class="reserve">예약하기</button>
+          <div class="con">
+            <h3 class="name">일반</h3>
+            <p class="price">₩129,000</p>
+            <p class="left">120석 남음</p>
+            <button class="reserve">예약하기</button>
+          </div>
         </div>
         <div class="cabin soldout">
-          <h3 class="name">비즈니스</h3>
-          <p class="price">₩419,000</p>
-          <p class="left">0석 남음</p>
-          <button class="reserve" disabled>매진</button>
+          <div class="con">
+            <h3 class="name">비즈니스</h3>
+            <p class="price">₩419,000</p>
+            <p class="left">0석 남음</p>
+            <button class="reserve" disabled>매진</button>
+          </div>
         </div>
         <div class="cabin soldout-soon">
-          <h3 class="name">퍼스트</h3>
-          <p class="price">₩699,000</p>
-          <p class="left">1석 남음</p>
-          <button class="reserve">예약하기</button>
+          <div class="con">
+            <h3 class="name">퍼스트</h3>
+            <p class="price">₩699,000</p>
+            <p class="left">1석 남음</p>
+            <button class="reserve">예약하기</button>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
