Meet all conditions

--- a/practice/p13/index.html
+++ b/practice/p13/index.html
@@ -150,7 +150,7 @@
                 <div>오전 11:30</div>
               </div>
               <div>
-                <h3 class="label">04h 15m</h3>
+                <h3 class="label smallTime">04h 15m</h3>
                 <img class="flight-icon" src="images/img_journey.svg">
               </div>
               <div>
@@ -212,7 +212,7 @@
                 <div>오후 12:30</div>
               </div>
               <div>
-                <h3 class="label">04h 15m</h3>
+                <h3 class="label smallTime">04h 15m</h3>
                 <img class="flight-icon" src="images/img_journey.svg">
               </div>
               <div>
