meet all conditions except flexible size

--- a/practice/p14/index.html
+++ b/practice/p14/index.html
@@ -14,12 +14,18 @@
 
 <body>
   <header>
-    <div class="logo"><span class="accent">CHAIN</span>IT</div>
-    <ul class="site menu">
-      <li class="active">포트폴리오</li>
-      <li>환전하기</li>
-      <li>코인 뉴스</li>
-    </ul>
+
+    <div>
+      <div class ="header_right">
+        <div class="logo"><span class="accent">CHAIN</span>IT</div>
+        <ul class="site menu">
+          <li class="active">포트폴리오</li>
+          <li>환전하기</li>
+          <li>코인 뉴스</li>
+        </ul>
+      </div>
+
+    </div>
     <ul class="auth menu">
       <li>로그인</li>
       <li class="active">가입하기</li>
@@ -142,8 +148,11 @@
         <hr>
         <div class="total">
           <span class="label big">총액</span>
-          <span class="total-price">22,795,000</span>
-          <span class="label big">KRW</span>
+
+          <div>
+            <span class="total-price">22,795,000</span>
+            <span class="label big">KRW</span>
+          </div>
         </div>
         <button class="order-button">매수하기</button>
       </section>
