complete frames without footer

--- a/Weekly_mission/index.html
+++ b/Weekly_mission/index.html
@@ -56,18 +56,33 @@
     <div class="content">
       <div class="frame">
         <div class="texts blue_blur">
+          <h2>저장한 링크를<br><span>공유</span>해 보세요</h2>
+          <div class="para">여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를 
+            공유해 보세요.</div>
+        </div>
+        <img src="images/img7.png">
+      </div>
+    </div>
+
+    <div class="content">
+      <div class="frame">
+        <img src="images/img6.png">
+        <div class="texts sky_blur">
           <h2>저장한 링크를<br><span>검색</span>해 보세요</h2>
           <div class="para">중요한 정보들을 검색으로 쉽게 찾아보세요.</div>
         </div>
-        <div style="position: relative;">
-          <img class="overlap_back" src="images/img4.png">
-          <div style="position: absolute;">
-            <img class="overlap_front" src="images/img5.png">
-          </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class = "frame">
+        <div class = "footer_element" >
+          <div class="codeit_2023">code-it - 2023</div>
+          <div class ="extra_info"><span>Privacy Policy</span> <span>FAQ</span></div>
         </div>
       </div>
 
-    </div>
+    </footer>
 
     </div>
   </main>
