--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
 
   <header>
     <div class=starter>
-      <img src="images/logo.png">
-      <button class="login">로그인</button>
+      <a href ="/index.html">
+          <img src="images/logo.png">
+      </a>
+      <button class="login" onClick="location.href = '/signin.html'">로그인</button>
     </div>
   </header>
 
+  
   <main>
     <div class="intro">
       <h1><span>세상의 모든 정보</span>를<br> 쉽게 저장하고 관리해보세요</h1>
 
-      <button class="addlink">링크 추가하기</button>
+      <button class="addlink" onClick="location.href = '/signup.html'"">링크 추가하기</button>
       <img src="images/img1.png">
 
     </div>
@@ -57,7 +60,7 @@
       <div class="frame">
         <div class="texts blue_blur">
           <h2>저장한 링크를<br><span>공유</span>해 보세요</h2>
-          <div class="para">여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를 
+          <div class="para">여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를
             공유해 보세요.</div>
         </div>
         <img src="images/img7.png">
@@ -75,10 +78,12 @@
     </div>
 
     <footer>
-      <div class = "frame">
-        <div class = "footer_element" >
+      <div class="frame">
+        <div class="footer_element">
           <div class="codeit_2023">code-it - 2023</div>
-          <div class ="extra_info"><span>Privacy Policy</span> <span>FAQ</span></div>
+          <div class="extra_info"><span>Privacy Policy</span> <span>FAQ</span></div>
+          <div class="sns_icons"><img src="images/facebook.png"><img src="images/twitter.png"><img
+              src="images/youtube.png"><img src="images/instagram.png"></div>
         </div>
       </div>
 
