update px to rem

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
   <header>
     <div class=starter>
-      <a href ="/index.html">
-          <img src="images/logo.png">
+      <a href="/index.html">
+        <img src="images/logo.png">
       </a>
       <button class="login" onClick="location.href = '/signin.html'">로그인</button>
     </div>
   </header>
 
-  
+
   <main>
     <div class="intro">
       <h1><span>세상의 모든 정보</span>를<br> 쉽게 저장하고 관리해보세요</h1>
 
       <button class="addlink" onClick="location.href = '/signup.html'"">링크 추가하기</button>
-      <img src="images/img1.png">
+      <img src=" images/img1.png">
 
     </div>
 
@@ -82,8 +82,11 @@
         <div class="footer_element">
           <div class="codeit_2023">code-it - 2023</div>
           <div class="extra_info"><span>Privacy Policy</span> <span>FAQ</span></div>
-          <div class="sns_icons"><img src="images/facebook.png"><img src="images/twitter.png"><img
-              src="images/youtube.png"><img src="images/instagram.png"></div>
+          <div class="sns_icons">
+            <a href="https://www.facebook.com"><img src="images/facebook.png"></a>
+            <a href = "https://twitter.com"><img src="images/twitter.png"></a>
+            <img src="images/youtube.png"><img src="images/instagram.png">
+          </div>
         </div>
       </div>
 
