--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <header>
     <div class=starter>
-      <a href="/index.html">
+      <a href="index.html">
         <img src="images/logo.png">
       </a>
-      <button class="login" onClick="location.href = '/signin.html'">로그인</button>
+      <button class="login" onClick="location.href = 'signin.html'">로그인</button>
     </div>
   </header>
 
@@ -25,8 +25,8 @@
     <div class="intro">
       <h1><span>세상의 모든 정보</span>를<br> 쉽게 저장하고 관리해보세요</h1>
 
-      <button class="addlink" onClick="location.href = '/signup.html'"">링크 추가하기</button>
-      <img src=" images/img1.png">
+      <button class="addlink" onClick="location.href = 'signup.html'">링크 추가하기</button>
+      <img src="images/img1.png">
 
     </div>
 
@@ -81,11 +81,12 @@
       <div class="frame">
         <div class="footer_element">
           <div class="codeit_2023">code-it - 2023</div>
-          <div class="extra_info"><span>Privacy Policy</span> <span>FAQ</span></div>
+          <div class="extra_info"><a href = "privacy.html"><span>Privacy Policy</span></a> <a href = "faq.html"><span>FAQ</span></a></div>
           <div class="sns_icons">
             <a href="https://www.facebook.com"><img src="images/facebook.png"></a>
             <a href = "https://twitter.com"><img src="images/twitter.png"></a>
-            <img src="images/youtube.png"><img src="images/instagram.png">
+            <a href = "https://www.youtube.com"><img src="images/youtube.png"></a>
+            <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
           </div>
         </div>
       </div>
