Upload the files

--- a/practice/p15/index.html
+++ b/practice/p15/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="utf-8">
   <title>Codeit Music</title>
-  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css">
+  <link rel="stylesheet" as="style" crossorigin
+    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <div class="wrap">Codeit Music</div>
@@ -21,7 +24,7 @@
   </section>
   <section class="headline wrap">
     <img class="headline-image" src="images/phone.png" alt="앱 실행 화면" width="504" height="520">
-    <div>
+    <div class = "phone-right">
       <h2 class="headline-heading">
         내 손안의<br>
         작은 파티,
@@ -38,6 +41,8 @@
     </div>
     <button class="promotion-button">멤버십 가입하고 혜택 받기</button>
   </section>
+
+
   <section class="wrap">
     <h2 class="plans-title">요금제</h2>
     <div class="plans">
@@ -45,7 +50,7 @@
         <div class="event-badge">EVENT</div>
         <h3>
           첫 구독<br>
-          3개월 33% 할인
+          3개월 33%<br> 할인
         </h3>
         <p>
           월 3,500원부터<br>
@@ -75,7 +80,7 @@
     </div>
     <h2 class="benefits-title">멤버십 정보</h2>
     <div class="benefits">
-      <div class="card">
+      <div class="card" id = "infinite-listen">
         <h3>무제한 듣기</h3>
         <ul>
           <li>모든 기기에서 재생</li>
@@ -101,24 +106,35 @@
       </div>
     </div>
   </section>
+
+
+
+
+
   <footer>
     <div class="footer-content wrap">
-      <a href="#">코드잇 소개</a>
-      <a href="#">사용자 이용 약관</a>
-      <a href="#">개인정보 취급방침</a>
-      <a href="#">자주 묻는 질문</a>
-      <a href="#">고객 센터</a>
-      <div class="footer-info">
-        (주) 코드잇<br>
-        대표 KANG YOUNG HOON, 이윤수<br>
-        개인정보보호책임자 강영훈
+
+      <div class="footer-buttons">
+        <a href="#">코드잇 소개</a>
+        <a href="#">사용자 이용 약관</a>
+        <a href="#">개인정보 취급방침</a>
+        <a href="#">자주 묻는 질문</a>
+        <a href="#">고객 센터</a>
       </div>
       <div class="footer-info">
-        사업자 번호 313-86-00797<br>
-        통신판매업 제 2019-서울중구-1034 호<br>
-        서울특별시 중구 청계천로 100 시그니쳐타워 동관 10층 코드잇
+        <div class = "info-lines">
+          <span>(주) 코드잇</span>
+          <span>대표 KANG YOUNG HOON, 이윤수</span>
+          <span></span>개인정보보호책임자 강영훈</span>
+        </div>
+        <div class = "info-lines">
+          사업자 번호 313-86-00797<br>
+          통신판매업 제 2019-서울중구-1034 호<br>
+          서울특별시 중구 청계천로 100 시그니쳐타워 동관 10층 코드잇
+        </div>
       </div>
     </div>
   </footer>
 </body>
+
 </html>
